<resources>
    <string name="app_name">Мобильная кофейня</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_password">Слишком короткий пароль</string>
    <string name="error_incorrect_password">Неправильный пароль</string>
    <string name="error_field_required">Это обязательное поле</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_start">StartActivity</string>
    <string name="book_items">Оформить заказ</string>
    <string name="close_session">Закрыть операционный день</string>
    <string name="orders_sum">Сумма по заказам: </string>
    <string name="cups_left">Остаток стаканов:</string>
    <string name="paid_prox">Прибыль:</string>
    <string name="admin_panel_button_label">Панель администратора</string>
    <string name="stats_button_label">Статистика</string>
    <string name="title_activity_admin">Admin</string>
    <string name="add_positions">Добавить позиции для торговли</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_title">Название товара: </string>
    <string name="good_price">Стоимость товара:</string>
    <string name="save_position_button">Сохранить</string>
    <string name="edit_formula">Редактировать формулу расчета зарплаты</string>
    <string name="edit_consumables">Редактировать расходники</string>
    <string name="goods">Товары:</string>
    <string name="menu_label">Меню:</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="cancel_order">Отменить</string>
    <string name="approve_order">Подтвердить</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="spending_text_label">Расходы:</string>
    <string name="confirm_session_close_alert_title">Подтверждение закрытия операционного дня</string>
    <string name="confirm_close_session_button">Закрыть</string>
    <string name="confirm_close_session_cancel_button">Отмена</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_stats_periods">Сводная статистика</string>
    <string name="title_stats_free_time">Статистика по датам</string>
    <string name="choose_date_stats">Выбрать даты для расчета</string>
    <string name="date_picker_from">От</string>
    <string name="date_picker_to">До</string>
    <string name="date_from_label">Дата от:</string>
    <string name="date_to_label">Дата до:</string>
    <string name="delete_position_button_label">Удалить</string>
    <string name="stats_label">Статистика за текущий день: </string>
    <string name="stats_period_label">Статистика по заказам за: </string>
    <string name="week_summary_label">Последнюю неделю:</string>
    <string name="yearly_stats_label">Последний год:</string>
    <string name="monthly_stats_label">Последний месяц:</string>
    <string name="stats_for_current_day_label">Статистика за текущий день:</string>
    <string name="start_session">Начать операционный день</string>
    <string name="continue_session">Продолжить операционный день</string>
    <string name="login_label">Логин</string>
    <string name="coffee_cup">Coffee Cup</string>
    <string name="tax_label">Процент к зарплате:</string>
    <string name="payment_size_label">Размер зарплаты:</string>
    <string name="not_closed_order_title">Невозможно закрыть операционный день! У вас есть открытый заказ. Пожалуйста закройте или отмените его.</string>
    <string name="error_title">Ошибка</string>
    <string name="confirm_label">Принять</string>
    <string name="closed_orders">Оформленные заказы: </string>
    <string name="cannot_create_new_session">Нельзя открыть более одного операционного дня в течении одних астрономических суток.</string>
    <string name="close_session_warning">Внимание! До начала новых суток нельзя будет открыть новый операционный день!</string>
</resources>
