<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.nkargin.coffeeshopmanager.feature.start.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:src="@drawable/coffee_decorative_text_png_vector_clipart"
                android:layout_height="200dp"
                android:contentDescription="@string/coffee_cup" />
        </TableRow>

        <TableLayout
            android:gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Button
                    android:id="@+id/admin_panel"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/admin_panel_button_label" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Button
                    android:id="@+id/statistics_button"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/stats_button_label" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Button
                    android:id="@+id/start_session_button"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/start_session" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
