<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.nkargin.coffeeshopmanager.feature.admin.AddPositionDialogFragment">

    <data>
        <variable
            name="model"
            type="ru.nkargin.coffeeshopmanager.model.Good"/>
    </data>

    <TableLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/good_title" />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.EditText"
                android:ems="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/good_price" />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.EditText"
                android:ems="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/save_position_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="2"
                android:text="@string/save_position_button" />

            <Button
                android:id="@+id/delete_position_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="2"
                android:text="@string/delete_position_button_label" />
        </TableRow>


    </TableLayout>

</layout>
