<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.nkargin.coffeeshopmanager.feature.admin.AddPositionDialogFragment">

    <data>
        <variable
            name="model"
            type="ru.nkargin.coffeeshopmanager.feature.admin.EditFormulasViewModel"/>
    </data>

    <TableLayout

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/payment_size_label" />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <EditText
                android:id="@+id/edit_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.EditText"
                android:ems="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@{model.payment}"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/tax_label" />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/edit_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.EditText"
                android:ems="10"
                android:layout_weight="1"
                android:text="@{model.tax}"
                android:textAlignment="center"
                android:inputType="numberSigned" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="2"
                android:text="@string/save_position_button" />

        </TableRow>


    </TableLayout>

</layout>
